refactor: 패키지 간 객체 참조 ID로 변경